2006-04-09 - Dmitry Dulepov <typo3@accio.lv>

 #Bug 2870: $TYPO3_CONF_VARS['BE']['fileadminDir'] doesn't work with templavoila
 #Fixed: undefined variables was passed to t3lib_div::loadTCA in mod1_sidebar

2006-04-07 - Robert Lemke <robert@typo3.org>

 # Bugfix: Re-implementation of feature #0001760 (see 06.04.) didn't take FCEs into account, so sub elements of FCE were not displayed in the backend. Fixed that.
 ~ Small update of the manual - now it at least has a small introduction referring to further documentation.
 # Bugfix: Warning: array_keys(): The first argument should be an array in class.tx_templavoila_api.php on line 1551. That happened when now languages were defined.

2006-04-07 - Robert Lemke <robert@typo3.org>

 RELEASE OF TEMPLAVOILA 1.0!

 # Re-implemented handling of the oldStyleColumn field when inserting and moving elements.
 + Added a new test for checking the colPos field after insertion of content elements

2006-04-06 - Robert Lemke <robert@typo3.org>

 + Added feature 0002221: Improvement request: In pagetype "shortcut" elements should be editable somehow
 # Re-implemented feature #0001760: Hide content elements when they are not mapped in the TO from the Page module. Resolves bug #0003047: Not mapped fields (areas) are schown in the page module.
 # Fixed bug 0003155: Errors in API functions
 # Added a check in the sidebar class to avoid a fatal error if an invalid data structure is selected for a page. (see also bug #3148)
 # (Hopefully) fixed bug 0002154: Problems with move up/down buttons in Frontend Editing. Search class.tx_templavoila_tcemain and the testcase for "2154"
 + Added new fixture and fixture functions for testing page templates with two columns

2006-04-05 - Robert Lemke <robert@typo3.org>
 
 ~ Created workaround for bug 0003128: CSM has 'TemplaVoil?' rather than 'TemplaVoila'

2006-04-05 - Dmitry Dulepov <typo3@accio.lv>

 + Wrote FAQ entry in the manual about bug 2691

2006-04-04 - Robert Lemke <robert@typo3.org>
