@@ -1,3 +1,7 @@
+2006-04-10 - Dmitry Dulepov <typo3@accio.lv>
+
+ #Bug 3195: CE wizard ignores CType.removeItems
+
 2006-04-09 - Dmitry Dulepov <typo3@accio.lv>
 
  #Bug 2870: $TYPO3_CONF_VARS['BE']['fileadminDir'] doesn't work with templavoila
